menambahkan background di website handphone

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(text.png);
+  background-image: url(background.png);
   background-size: cover;
   background-position: 70%;
   background-repeat: no-repeat;
